# odexp

./: .gitignore  .inputrc  .makefile.swo  .runodexp.sh.swo  AUTHOR  CMakeLists.txt  INSTALL  Mark Hoffmann  README.md  dataloader.txt  dlist.c  dlist.h  help.txt  hi.aac  libodexp.dylib  macros.h  makefile  methods_odexp.c  methods_odexp.h  odexp  odexp.c  odexp.h  odexp.old  odexp_perl  parse_line  parsevector.sh  rand_gen.c  rand_gen.h  runodexp.sh  utils_odexp.c  utils_odexp.h
dev/: nls.c  nls.h
examples/: Nbody.pop  kuramoto.pop  kuramoto_lowrank.pop  vanDerPol.pop
src/: .inputrc  cheby_expansion.c  cheby_expansion.h  datastruct.c  datastruct.h  dlist.c  dlist.h  help.txt  loader.c  loader.h  lrexp.c  lrexp.h  macros.h  main.c  main.h  methods_odexp.c  methods_odexp.h  odexp  odexp.c  odexp.h  odexp.man  odexp.mdoc  odexp.pc.in  odexp2md  odexpConfig.h.in  options.c  options.h  rand_gen.h  utils_odexp.c  utils_odexp.h
